# qxq

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: bytecode.rs  codegen.rs  diagnostic.rs  lib.rs  main.rs  parser.rs  sexp.rs  tokenizer.rs
tests/: 0_debug.qxq
tests/1_core_features/: 01_arithmetic.qxq  02_bindings.qxq  03_control_flow.qxq  04_functions.qxq
tests/2_advanced_patterns/: 01_recursion.qxq  02_higher_order_functions.qxq
tests/3_algorithms/: 01_math_utils.qxq  02_text_utils.qxq
