[package]
name = "qxq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
boxing = "0.1.2"
bumpalo = "3.16.0"
by_address = "1.2.1"
hashbrown = "0.16"
hashconsing = "1.6.0"
im = "15.1.0"
indexmap = "2.2.6"
itertools = "0.14"
once_cell = "1.19.0"
ordermap = "0.5.0"
phf = { version = "0.13", features = ["macros"] }
small-map = "0.1.3"
smallvec = "1.13.2"
rustyline = { version = "17.0", features = ["derive"] }
chrono = "0.4.42"

